RESOLVED FIXED280863
[iOS] Clipping fails in position: relative; text fields when SelectionHonorsOverflowScrolling is enabled
https://bugs.webkit.org/show_bug.cgi?id=280863
Summary [iOS] Clipping fails in position: relative; text fields when SelectionHonorsO...
Wenson Hsieh
Reported 2024-10-03 17:08:29 PDT
.
Attachments
Wenson Hsieh
Comment 1 2024-10-03 17:11:03 PDT
To reproduce: 1. Enable SelectionHonorsOverflowScrolling 2. Go to https://whsieh.github.io/examples/subframes 3. Scroll down to the "Cross Origin" example (fake Duck Duck Go search results) 4. Focus the search field and type enough text to make the search field contents horizontally scrollable. 5. Select text in the search field 6. Scroll down. Observed: selection pokes out from underneath the clipped region of the subframe. Expected: selection should be fully clipped.
Radar WebKit Bug Importer
Comment 2 2024-10-03 17:11:21 PDT
Wenson Hsieh
Comment 3 2024-10-03 17:20:43 PDT
EWS
Comment 4 2024-10-03 20:33:59 PDT
Committed 284659@main (91675a20f98f): <https://commits.webkit.org/284659@main> Reviewed commits have been landed. Closing PR #34665 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.