[iOS] Clipping fails in position: relative; text fields when SelectionHonorsOverflowScrolling is enabled https://bugs.webkit.org/show_bug.cgi?id=280863 rdar://137243937

Reviewed by Aditya Keerthi.

It's possible for a scrollable `RenderBox` (i.e. `canBeScrolledAndHasScrollableArea()` is `true`) to
not have a `ScrollableArea`. In this case, we currently bail from the ancestor walk altogether;
however, this means we could potentially miss a scrolling node that's further up the render tree.

Fix this by continuing on to the next scroller, rather than breaking from the for loop entirely
during this traversal.

* LayoutTests/editing/selection/ios/selection-clip-in-position-relative-text-field-expected.txt: Added.
* LayoutTests/editing/selection/ios/selection-clip-in-position-relative-text-field.html: Added.

Add a layout test to exercise the change.

* LayoutTests/editing/selection/ios/selection-hit-testing-in-overflow-scroller.html:

Drive-by fix: delete a redundant `querySelector` call.

* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::forEachEnclosingScroller):
(WebKit::WebPage::computeSelectionClipRectAndEnclosingScroller const):

Canonical link: https://commits.webkit.org/284659@main